# poc_sqlite

./: .gitignore  Makefile.am  README.md  configure.ac
src/lib/: Makefile.am  libpoc_sqlite-base.c  libpocsqlite-base.c  pocsqlite-base.c  pocsqlite-base.h
