SUBDIRS = \
          src/lib \
          src/bin

# The libraries to build
noinst_LIBRARIES = libpocsqlite-base.a
noinst_HEADERS = pocsqlite_base.h

# The files to add to the library and to the source distribution
libpocsqlite_base_a_SOURCES = \
                         $(libpocsqlite_base_a_HEADERS) \
                         pocsqlite_base.c
